Bug 324510 - Custom TODO marker words are not persistent
Summary: Custom TODO marker words are not persistent
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.5.60
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 4.3.0
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-04 19:41 UTC by rjwgnr27
Modified: 2013-09-15 05:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description rjwgnr27 2013-09-04 19:41:31 UTC
Adding new TODO marker word is not persistent across application restarts.

Reproducible: Always

Steps to Reproduce:
Added a custom "TODO marker word" (Settings -> Language Support -> TODO marker words). Defaults are: "TODO FIXME". I added a custom word ("KILLME"). Click "OK". 

If I re-open settings, the new word is there. If I close then restart the application and check the settings, the settings are back to the defaults.

Actual Results:  
Custom marker word is lost on restart.


Expected Results:  
Custom marker word should be restored on restart.
Comment 1 Vlas Puhov 2013-09-15 05:59:20 UTC
Git commit e5b18d8f5ae5083b5d7bb1276320a90c0d43ad44 by Vlas Puhov.
Committed on 14/09/2013 at 17:37.
Pushed by vpuhov into branch 'master'.

Fix todo marker words and detailed completion settings not
persistent across application restart.

CCPreferences class is written with use of KCModule, so all settings
can be saved/loaded automatically. For that widget's names should
start with kcfg_ prefix, but neither todoMarkerWords nor completionDetail
had one. Instead their values were set manually, but not written
to the config file.
REVIEW: 112590

M  +2    -1    interfaces/icompletionsettings.h
M  +75   -3    shell/completionsettings.cpp
M  +36   -71   shell/completionsettings.h
M  +10   -11   shell/settings/ccconfig.kcfg
M  +5    -27   shell/settings/ccpreferences.cpp
M  +1    -3    shell/settings/ccpreferences.h
M  +6    -3    shell/settings/ccsettings.ui

http://commits.kde.org/kdevplatform/e5b18d8f5ae5083b5d7bb1276320a90c0d43ad44