Fix todo marker words and detailed completion settings not persistent across application restart.

CCPreferences class is written with use of KCModule, so all settings
can be saved/loaded automatically. For that widget's names should
start with kcfg_ prefix, but neither todoMarkerWords nor completionDetail
had one. Instead their values were set manually, but not written
to the config file.

BUG: 324510
REVIEW: 112590